improve readability of button functions, fix game logic according to ties, add more styling, add game logic to prevent matching player symbols and player symbols >1 character in length

--- a/styles.css
+++ b/styles.css
@@ -32,3 +32,14 @@ body{
     justify-content: center;
     flex-direction: column;
 }
+
+.close{
+    align-self: end;
+    cursor: pointer;
+}
+
+#new-game{
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+}
